Fix footer spacing and transparency

--- a/app/assets/stylesheets/_mixins.default.css.sass
+++ b/app/assets/stylesheets/_mixins.default.css.sass
@@ -70,6 +70,7 @@
     background-color: $background-color
 
   #tools
+    background-color: $background-color
     a, a:before
       border-color: $font-color
       color: $font-color
